first gui mockup

--- a/Latex/bachelor.tex
+++ b/Latex/bachelor.tex
@@ -6,13 +6,14 @@
 %Informationen zur Arbeit
 \newcommand{\printname}{Lars Haalck}
 \newcommand{\printmatrickel}{407 846}
-\newcommand{\printtitel}{bla bla}
+\newcommand{\printtitel}{Entzerrung von Kegeloberflächen aus einer Einkameraansicht basierend auf projektiver Geometrie}
 \newcommand{\printort}{Münster}
 \newcommand{\printartderarbeit}{Bachelorarbeit}
 \newcommand{\printstudiengang}{BSc. Informatik}
 \newcommand{\printstudiengrad}{Bachelor of Science}
-\newcommand{\printsbetreuer}{bla}
-\newcommand{\printweitererbetreuer}{bla}
+\newcommand{\printbetreuer}{Dimitri Berh}
+\newcommand{\printerstgutachten}{Prof. Dr. Xiaoyi Jiang}
+\newcommand{\printzweitgutachten}{Prof. Dr. Klaus Hinrichs}
 \newcommand{\printinstitut}{Institut für Informatik}
 
 %\hyphenation{Be"-tween"-ness"--Zen"-tra"-li"-tät}
