ein paar skizzen und formeln

--- a/Latex/preamble.tex
+++ b/Latex/preamble.tex
@@ -113,8 +113,11 @@
 \WarningFilter{latexfont}{Font shape `U/bbold/m/n' in size}
 \DeclareSymbolFont{bbold}{U}{bbold}{m}{n}
 \DeclareSymbolFontAlphabet{\mathbbold}{bbold}
-\newcommand{\ind}{\mathbbold{1}} 
+\newcommand{\ind}{\mathbbold{1}}
 
+
+\newcommand{\atano}{\text{atan}}
+\newcommand{\atant}{\text{atan2}}
 %-- Ein sehr hübscher Mengen-Befehl
 \newcommand\SetSymbol[1][]{\nonscript\:#1\vert\allowbreak\nonscript\:\mathopen{}}
 \providecommand\given{} % to make it exist
@@ -189,7 +192,7 @@
 %-- Theorem-Pakete und Konfiguration
 \usepackage{thmtools}
 
-\usepackage{bookmark} 
+\usepackage{bookmark}
 % Theoreme als PDF-Lesezeichen
 \bookmarksetup{open,numbered}
 \makeatletter
@@ -205,7 +208,7 @@
       \space(\thmt@shortoptarg)%
     \fi
   }%
-}   
+}
 \makeatother
 
 
