--- a/Latex/bachelor.tex
+++ b/Latex/bachelor.tex
@@ -37,6 +37,8 @@
 \cleardoubleoddemptypage
 \input{chapter/theorie.tex}
 \cleardoubleoddemptypage
+\input{chapter/methodik.tex}
+\cleardoubleoddemptypage
 \input{chapter/implementierung.tex}
 \cleardoubleoddemptypage
 \input{chapter/analyse.tex}
