--- a/Latex/preamble.tex
+++ b/Latex/preamble.tex
@@ -1,6 +1,6 @@
 %!TEX root = bachelor.tex
 % -- Author: Jannes Bantje, j.bantje@wwu.de
-\documentclass[german,a4paper,index=totoc,toc=listof,fontsize=12,DIV=13,headinclude,twoside,BCOR=12mm,cleardoublepage=empty]{scrreprt}
+\documentclass[german,a4paper,draft,index=totoc,toc=listof,fontsize=12,DIV=13,headinclude,twoside,BCOR=12mm,cleardoublepage=empty]{scrreprt}
 
 
 %-- Basics für graphische Sachen
@@ -55,9 +55,9 @@
 }
 
 \usepackage{listings}
-%\usepackage{minted}
+%\usepackage{fvextra}
 %\renewcommand\listoflistingscaption{Liste der Quelldateien}
-%\setminted[java]{
+%\setminted[c++]{
 %	linenos,
 %	autogobble=true,
 %	breaklines=true,
