--- a/Latex/quellen.bib
+++ b/Latex/quellen.bib
@@ -1,6 +1,6 @@
-@book{zafarani,
-  title={Social media mining: an introduction},
-  author={Zafarani, Reza and Abbasi, Mohammad Ali and Liu, Huan},
-  year={2014},
-  publisher={Cambridge University Press}
+@article{Eberly2013,
+author = {Eberly, David},
+file = {:D$\backslash$:/lars/Documents/gitProjects/BA-Haalck-2016/Literatur/DistancePointEllipseEllipsoid.pdf:pdf},
+title = {{Distance from a Point to an Ellipse, an Ellipsoid, or a Hyperellipsoid}},
+year = {2013}
 }
