--- a/Latex/quellen.bib
+++ b/Latex/quellen.bib
@@ -1,6 +1,12 @@
+@book{Lawrence1972,
+author = {Lawrence, J D},
+pages = {62--63},
+publisher = {Dover Publications},
+title = {{A Catalog of Special Plane Curves}},
+year = {1972}
+}
 @article{Eberly2013,
 author = {Eberly, David},
-file = {:D$\backslash$:/lars/Documents/gitProjects/BA-Haalck-2016/Literatur/DistancePointEllipseEllipsoid.pdf:pdf},
 title = {{Distance from a Point to an Ellipse, an Ellipsoid, or a Hyperellipsoid}},
 year = {2013}
 }
