--- a/Latex/quellen.bib
+++ b/Latex/quellen.bib
@@ -8,5 +8,6 @@ year = {1972}
 @article{Eberly2013,
 author = {Eberly, David},
 title = {{Distance from a Point to an Ellipse, an Ellipsoid, or a Hyperellipsoid}},
+pages = {1--13},
 year = {2013}
 }
