ransac, interpolation graphic

--- a/Latex/quellen.bib
+++ b/Latex/quellen.bib
@@ -5,9 +5,27 @@ publisher = {Dover Publications},
 title = {{A Catalog of Special Plane Curves}},
 year = {1972}
 }
+
 @article{Eberly2013,
 author = {Eberly, David},
 title = {{Distance from a Point to an Ellipse, an Ellipsoid, or a Hyperellipsoid}},
 pages = {1--13},
 year = {2013}
+}
+
+@article{Fischler1981,
+abstract = {A new paradigm, Random Sample Consensus (RANSAC), for fitting a model to experimental data is introduced. RANSAC is capable of interpreting/ smoothing data containing a significant percentage of gross errors, and is thus ideally suited for applications in automated image analysis where interpretation is based on the data provided by error-prone feature detectors. A major portion of this paper describes the application of RANSAC to the Location Determination Problem (LDP): Given an image depicting a set of landmarks with known locations, determine that point in space from which the image was obtained. In response to a RANSAC requirement, new results are derived on the minimum number of landmarks needed to obtain a solution, and algorithms are presented for computing these minimum-landmark solutions in closed form. These results provide the basis for an automatic system that can solve the LDP under difficult viewing and analysis conditions. Implementation details and computational examples are also presented.},
+author = {Fischler, Martin a and Bolles, Robert C},
+doi = {10.1145/358669.358692},
+file = {:D$\backslash$:/lars/Documents/gitProjects/BA-Haalck-2016/Literatur/ransac.pdf:pdf},
+isbn = {0934613338},
+issn = {0001-0782},
+journal = {Communications of the ACM},
+keywords = {automated cartography,camera calibration,computer{\_}vision,epipolar,geometry,image matching,keypoints,location determination,match-rejection,model fitting,motion-estimation,multi-view,rpc,scene analysis,sift,stereo,structure{\_}from{\_}motion,tracking},
+number = {6},
+pages = {381 -- 395},
+title = {{Random Sample Consensus: A Paradigm for Model Fitting with Applicatlons to Image Analysis and Automated Cartography}},
+url = {http://dx.doi.org/10.1145/358669.358692},
+volume = {24},
+year = {1981}
 }
