--- a/Latex/quellen.bib
+++ b/Latex/quellen.bib
@@ -29,3 +29,54 @@ url = {http://dx.doi.org/10.1145/358669.358692},
 volume = {24},
 year = {1981}
 }
+
+
+@article{Tsai1987,
+abstract = {A new technique for three-dimensional (3D) camera calibration for machine vision metrology using off-the-shelf TV cameras and lenses is described. The two-stage technique is aimed at efficient computation of camera external position and orientation relative to object reference coordinate system as well as the effective focal length, radial lens distortion, and image scanning parameters. The two-stage technique has advantage in terms of accuracy, speed, and versatility over existing state-of-the-art. A critical review of the state of the art is given in the beginning. A theoretical framework is established, supported by comprehensive proof in five appendixes, and may pave the way for future research on 3D robotics vision. Test results using real data are described. Both accuracy and speed are reported. The experimental results are analyzed and compared with theoretical prediction. Recent effort indicates that with slight modification, the two-stage calibration can be done in real time.},
+author = {Tsai, Roger Y.},
+doi = {10.1109/JRA.1987.1087109},
+file = {:D$\backslash$:/lars/Documents/gitProjects/BA-Haalck-2016/Literatur/Tsai.pdf:pdf},
+isbn = {0867202947},
+issn = {08824967},
+journal = {IEEE Journal on Robotics and Automation},
+number = {4},
+pages = {323--344},
+pmid = {61},
+title = {{A Versatile Camera Calibration Technique for High-Accuracy 3D Machine Vision Metrology Using Off-the-Shelf TV Cameras and Lenses}},
+volume = {3},
+year = {1987}
+}
+
+
+@article{Heikkila1997,
+abstract = {In geometrical camera calibration the objective is to determine a set of camera parameters that describe the mapping between 3-D reference coordinates and 2-D image coordinates. Various methods for camera calibration can be found from the literature....},
+author = {Heikkil{\"{a}}, Janne and Silv{\'{e}}n, Olli},
+doi = {10.1109/CVPR.1997.609468},
+file = {:D$\backslash$:/lars/Documents/gitProjects/BA-Haalck-2016/Literatur/heikkila97.pdf:pdf},
+isbn = {0-8186-7822-4},
+issn = {1063-6919},
+journal = {Cvpr},
+pages = {1106--1112},
+pmid = {1151469},
+title = {{A Four-step Camera Calibration Procedure with Implicit Image Correction.}},
+url = {http://dx.doi.org/10.1109/CVPR.1997.609468$\backslash$npapers3://publication/doi/10.1109/CVPR.1997.609468},
+year = {1997}
+}
+
+
+@article{Canny1986,
+abstract = {This paper describes a computational approach to edge detection. The success of the approach depends on the definition of a comprehensive set of goals for the computation of edge points. These goals must be precise enough to delimit the desired behavior of the detector while making minimal assumptions about the form of the solution. We define detection and localization criteria for a class of edges, and present mathematical forms for these criteria as functionals on the operator impulse response. A third criterion is then added to ensure that the detector has only one response to a single edge. We use the criteria in numerical optimization to derive detectors for several common image features, including step edges. On specializing the analysis to step edges, we find that there is a natural uncertainty principle between detection and localization performance, which are the two main goals. With this principle we derive a single operator shape which is optimal at any scale. The optimal detector has a simple approximate implementation in which edges are marked at maxima in gradient magnitude of a Gaussian-smoothed image. We extend this simple detector using operators of several widths to cope with different signal-to-noise ratios in the image. We present a general method, called feature synthesis, for the fine-to-coarse integration of information from operators at different scales. Finally we show that step edge detector performance improves considerably as the operator point spread function is extended along the edge.},
+author = {Canny, John},
+doi = {10.1109/TPAMI.1986.4767851},
+file = {:D$\backslash$:/lars/Documents/gitProjects/BA-Haalck-2016/Literatur/canny1986.pdf:pdf},
+isbn = {0162-8828},
+issn = {01628828},
+journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+keywords = {Edge detection,feature extraction,image processing,machine vision,multiscale image analysis},
+number = {6},
+pages = {679--698},
+pmid = {21869365},
+title = {{A Computational Approach to Edge Detection}},
+volume = {PAMI-8},
+year = {1986}
+}
