kamera kalib, ausgleichsproblem

--- a/Latex/quellen.bib
+++ b/Latex/quellen.bib
@@ -69,7 +69,7 @@ abstract = {This paper describes a computational approach to edge detection. The
 author = {Canny, John},
 doi = {10.1109/TPAMI.1986.4767851},
 file = {:D$\backslash$:/lars/Documents/gitProjects/BA-Haalck-2016/Literatur/canny1986.pdf:pdf},
-isbn = {0162-8828},
+isbn = {0-934613-33-8},
 issn = {01628828},
 journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
 keywords = {Edge detection,feature extraction,image processing,machine vision,multiscale image analysis},
@@ -79,4 +79,19 @@ pmid = {21869365},
 title = {{A Computational Approach to Edge Detection}},
 volume = {PAMI-8},
 year = {1986}
+}
+
+
+@article{Lindeberg1993,
+abstract = {This article presents: (i) a multiscale representation of grey-level shape called the scale-space primal sketch, which makes explicit both features in scale-space and the relations between structures at different scales, (ii) a methodology for extracting significant blob-like image structures from this representation, and (iii) applications to edge detection, histogram analysis, and junction classification demonstrating how the proposed method can be used for guiding later-stage visual processes. The representation gives a qualitative description of image structure, which allows for detection of stable scales and associated regions of interest in a solely bottom-up data-driven way. In other words, it generates coarse segmentation cues, and can hence be seen as preceding further processing, which can then be properly tuned. It is argued that once such information is available, many other processing tasks can become much simpler. Experiments on real imagery demonstrate that the proposed theory gives intuitive results.},
+author = {Lindeberg, Tony},
+doi = {10.1007/BF01469346},
+file = {:D$\backslash$:/lars/Documents/gitProjects/BA-Haalck-2016/Literatur/det-sal-blob-structs.ijcv93.pdf:pdf},
+issn = {09205691},
+journal = {International Journal of Computer Vision},
+number = {3},
+pages = {283--318},
+title = {{Detecting salient blob-like image structures and their scales with a scale-space primal sketch: A method for focus-of-attention}},
+volume = {11},
+year = {1993}
 }
