ein paar aenderungen, neue graphik fuer ellipsen, lsq fertig

--- a/Latex/quellen.bib
+++ b/Latex/quellen.bib
@@ -95,3 +95,21 @@ title = {{Detecting salient blob-like image structures and their scales with a s
 volume = {11},
 year = {1993}
 }
+
+
+@book{Stoer2007,
+author = {Stoer, Burlisch},
+pages = {249--253},
+publisher = {Springer},
+title = {{Numerische Mathematik 1}},
+year = {2007}
+}
+
+
+@book{Stoer2011,
+author = {Stoer, Burlisch},
+pages = {21--23},
+publisher = {Springer},
+title = {{Numerische Mathematik 2}},
+year = {2011}
+}
