--- a/Latex/preamble.tex
+++ b/Latex/preamble.tex
@@ -27,6 +27,7 @@
 \usepackage[libertine,cmintegrals,bigdelims,varbb]{newtxmath}
 \usepackage[ngerman]{babel}
 \usepackage[babel=true, tracking=true,final]{microtype}
+\usepackage{easybmat}
 
 %Tabellen
 \usepackage{tabularx}
