gui bilder, analyse, fazit

--- a/Latex/quellen.bib
+++ b/Latex/quellen.bib
@@ -113,3 +113,17 @@ publisher = {Springer},
 title = {{Numerische Mathematik 2}},
 year = {2011}
 }
+
+
+@ARTICLE{Gorman1976, 
+author={F. O'Gorman and M. B. Clowes},
+journal={IEEE Transactions on Computers},
+title={Finding Picture Edges Through Collinearity of Feature Points},
+year={1976},
+volume={C-25},
+number={4},
+pages={449-456},
+keywords={Edge finding, machine vision, scene analysis.;Cameras;Computer architecture;Context modeling;Councils;Foot;Layout;Leg;Machine vision;Psychology;TV;Edge finding, machine vision, scene analysis.},
+doi={10.1109/TC.1976.1674627},
+ISSN={0018-9340},
+month={April},}
