ein paar aenderungen

--- a/Latex/bachelor.tex
+++ b/Latex/bachelor.tex
@@ -46,14 +46,16 @@
 \input{chapter/fazit.tex}
 \cleardoubleoddemptypage
 \appendix % hier beginnt der Anhang
+\input{chapter/anhang_auswertung.tex}
+\cleardoubleoddemptypage
 \listoffigures
 \cleardoubleoddemptypage
-\listoftables
+%\listoftables
 %\cleardoubleoddemptypage
 %\listof{algorithm}{Algorithmenverzeichnis}
 %\cleardoubleoddemptypage
 %\listoflistings
-\cleardoubleoddemptypage
+%\cleardoubleoddemptypage
 \printbibliography
 \cleardoubleoddemptypage
 \input{chapter/eidesstattliche.tex}
