--- a/Latex/preamble.tex
+++ b/Latex/preamble.tex
@@ -28,6 +28,7 @@
 \usepackage[ngerman]{babel}
 \usepackage[babel=true, tracking=true,final]{microtype}
 \usepackage{easybmat}
+\usepackage{rotating}
 
 %Tabellen
 \usepackage{tabularx}
