bicubic vs linear

--- a/Latex/quellen.bib
+++ b/Latex/quellen.bib
@@ -30,7 +30,6 @@ volume = {24},
 year = {1981}
 }
 
-
 @article{Tsai1987,
 abstract = {A new technique for three-dimensional (3D) camera calibration for machine vision metrology using off-the-shelf TV cameras and lenses is described. The two-stage technique is aimed at efficient computation of camera external position and orientation relative to object reference coordinate system as well as the effective focal length, radial lens distortion, and image scanning parameters. The two-stage technique has advantage in terms of accuracy, speed, and versatility over existing state-of-the-art. A critical review of the state of the art is given in the beginning. A theoretical framework is established, supported by comprehensive proof in five appendixes, and may pave the way for future research on 3D robotics vision. Test results using real data are described. Both accuracy and speed are reported. The experimental results are analyzed and compared with theoretical prediction. Recent effort indicates that with slight modification, the two-stage calibration can be done in real time.},
 author = {Tsai, Roger Y.},
@@ -115,7 +114,7 @@ year = {2011}
 }
 
 
-@ARTICLE{Gorman1976, 
+@ARTICLE{Gorman1976,
 author={F. O'Gorman and M. B. Clowes},
 journal={IEEE Transactions on Computers},
 title={Finding Picture Edges Through Collinearity of Feature Points},
@@ -127,3 +126,11 @@ keywords={Edge finding, machine vision, scene analysis.;Cameras;Computer archite
 doi={10.1109/TC.1976.1674627},
 ISSN={0018-9340},
 month={April},}
+
+
+@Book{Hartley2000,
+    author = "Hartley, R.~I. and Zisserman, A.",
+    title = "Multiple View Geometry in Computer Vision",
+    year = "2000",
+    publisher = "Cambridge University Press, ISBN: 0521623049"
+}
