--- a/Latex/quellen.bib
+++ b/Latex/quellen.bib
@@ -134,3 +134,19 @@ month={April},}
     year = "2000",
     publisher = "Cambridge University Press, ISBN: 0521623049"
 }
+
+@article{Zhang2002,
+abstract = {We propose a flexible new technique to easily calibrate a camera. It is well suited for use without specialized knowledge of 3D geometry or computer vision. The technique only requires the camera to observe a planar pattern shown at a few (at least two) different orientations. Either the camera or the planar pattern can be freely moved. The motion need not be known. Radial lens distortion is modeled. The proposed procedure consists of a closed-form solution, followed by a nonlinear refinement based on the maximum likelihood criterion. Both computer simulation and real data have been used to test the proposed technique, and very good results have been obtained. Compared with classical techniques which use expensive equipment such as two or three orthog- onal planes, the proposed technique is easy to use and flexible. It advances 3D computer vision one step from laboratory environments to real world use.},
+author = {Zhang, Zhengyou},
+doi = {10.1109/34.888718},
+file = {:D$\backslash$:/lars/Documents/gitProjects/BA-Haalck-2016/Literatur/ZhangCameraCalib.pdf:pdf},
+isbn = {MSR-TR-98-71},
+issn = {01628828},
+journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+number = {11},
+pages = {1330--1334},
+pmid = {131},
+title = {{A Flexible New Technique for Camera Calibration (Technical Report)}},
+volume = {22},
+year = {2002}
+}
