--- a/Latex/preamble.tex
+++ b/Latex/preamble.tex
@@ -29,6 +29,7 @@
 \usepackage[babel=true, tracking=true,final]{microtype}
 \usepackage{easybmat}
 \usepackage{rotating}
+\usepackage{parskip}
 
 %Tabellen
 \usepackage{tabularx}
