--- a/Latex/quellen.bib
+++ b/Latex/quellen.bib
@@ -150,3 +150,26 @@ title = {{A Flexible New Technique for Camera Calibration (Technical Report)}},
 volume = {22},
 year = {2002}
 }
+
+@book{Bosch2006,
+author = {Bosch, Siegfried},
+doi = {10.1007/3-540-29885-1},
+file = {:D$\backslash$:/lars/Documents/Uni/WS13/Lina/bosch{\_}lina.pdf:pdf},
+isbn = {3-540-29884-3},
+issn = {0717-6163},
+pmid = {15003161},
+title = {{Lineare Algebra}},
+url = {http://www.ncbi.nlm.nih.gov/pubmed/15003161$\backslash$nhttp://cid.oxfordjournals.org/lookup/doi/10.1093/cid/cir991$\backslash$nhttp://www.scielo.cl/pdf/udecada/v15n26/art06.pdf$\backslash$nhttp://www.scopus.com/inward/record.url?eid=2-s2.0-84861150233{\&}partnerID=tZOtx3y1$\backslash$nhttp://link.spr},
+year = {2006}
+}
+
+
+@misc{Yuille1992,
+author = {Yuille, Alan L. and Hallinan, Peter W. and Cohen, David S.},
+booktitle = {International journal of computer vision},
+file = {:D$\backslash$:/lars/Documents/gitProjects/BA-Haalck-2016/Literatur/deformable.pdf:pdf},
+issn = {0920-5691},
+pages = {99--111},
+title = {{Feature Extraction from faces using deformable Template}},
+year = {1992}
+}
