groessere winkel bei rotationsauswertung, dice koeff als mass fuer ransac

--- a/Latex/quellen.bib
+++ b/Latex/quellen.bib
@@ -173,3 +173,31 @@ pages = {99--111},
 title = {{Feature Extraction from faces using deformable Template}},
 year = {1992}
 }
+
+
+@article{Keys1981,
+abstract = {Cubic convolution interpolation is a new technique for resampling discrete data. It has a number of desirable features which make it useful for image processing. The technique can be performed efficiently on a digital computer. The cubic convolution interpolation function converges uniformly to the function being interpolated as the sampling increment approaches zero. With the appropriate boundary conditions and constraints on the interpolation kernel, it can be shown that the order of accuracy of the cubic convolution method is between that of linear interpolation and that of cubic splines. A one-dimensional interpolation function is derived in this paper. A separable extension of this algorithm to two dimensions is applied to image data.},
+author = {Keys, R.},
+doi = {10.1109/TASSP.1981.1163711},
+file = {:D$\backslash$:/lars/Documents/gitProjects/BA-Haalck-2016/Literatur/bicubic.pdf:pdf},
+isbn = {0096-3518},
+issn = {0096-3518},
+journal = {IEEE Transactions on Acoustics, Speech, and Signal Processing},
+number = {6},
+pages = {1153--1160},
+title = {{Cubic convolution interpolation for digital image processing}},
+volume = {29},
+year = {1981}
+}
+
+
+@article{Dice1945,
+author = {Dice, Lee R .},
+file = {:D$\backslash$:/lars/Documents/gitProjects/BA-Haalck-2016/Literatur/dice.pdf:pdf},
+journal = {Ecological Society of America},
+number = {3},
+pages = {297--302},
+title = {{Measures of the Amount of Ecologic Association Between Species}},
+volume = {26},
+year = {1945}
+}
