clean up quellen

--- a/Latex/quellen.bib
+++ b/Latex/quellen.bib
@@ -3,96 +3,103 @@ author = {Lawrence, J D},
 pages = {62--63},
 publisher = {Dover Publications},
 title = {{A Catalog of Special Plane Curves}},
-year = {1972}
+year = {1972},
+isbn = {9780486602882},
 }
 
 @article{Eberly2013,
 author = {Eberly, David},
 title = {{Distance from a Point to an Ellipse, an Ellipsoid, or a Hyperellipsoid}},
 pages = {1--13},
-year = {2013}
+year = {2013},
 }
 
 @article{Fischler1981,
-abstract = {A new paradigm, Random Sample Consensus (RANSAC), for fitting a model to experimental data is introduced. RANSAC is capable of interpreting/ smoothing data containing a significant percentage of gross errors, and is thus ideally suited for applications in automated image analysis where interpretation is based on the data provided by error-prone feature detectors. A major portion of this paper describes the application of RANSAC to the Location Determination Problem (LDP): Given an image depicting a set of landmarks with known locations, determine that point in space from which the image was obtained. In response to a RANSAC requirement, new results are derived on the minimum number of landmarks needed to obtain a solution, and algorithms are presented for computing these minimum-landmark solutions in closed form. These results provide the basis for an automatic system that can solve the LDP under difficult viewing and analysis conditions. Implementation details and computational examples are also presented.},
-author = {Fischler, Martin a and Bolles, Robert C},
-doi = {10.1145/358669.358692},
-file = {:D$\backslash$:/lars/Documents/gitProjects/BA-Haalck-2016/Literatur/ransac.pdf:pdf},
-isbn = {0934613338},
-issn = {0001-0782},
-journal = {Communications of the ACM},
-keywords = {automated cartography,camera calibration,computer{\_}vision,epipolar,geometry,image matching,keypoints,location determination,match-rejection,model fitting,motion-estimation,multi-view,rpc,scene analysis,sift,stereo,structure{\_}from{\_}motion,tracking},
-number = {6},
-pages = {381 -- 395},
-title = {{Random Sample Consensus: A Paradigm for Model Fitting with Applicatlons to Image Analysis and Automated Cartography}},
-url = {http://dx.doi.org/10.1145/358669.358692},
+author = {Fischler, Martin A. and Bolles, Robert C.},
+title = {Random Sample Consensus: A Paradigm for Model Fitting with Applications to Image Analysis and Automated Cartography},
+journal = {Commun. ACM},
+issue_date = {June 1981},
 volume = {24},
-year = {1981}
+number = {6},
+year = {1981},
+issn = {0001-0782},
+pages = {381--395},
+numpages = {15},
+url = {http://doi.acm.org/10.1145/358669.358692},
+doi = {10.1145/358669.358692},
+acmid = {358692},
+publisher = {ACM},
+address = {New York, NY, USA},
+keywords = {automated cartography, camera calibration, image matching, location determination, model fitting, scene analysis},
 }
 
-@article{Tsai1987,
-abstract = {A new technique for three-dimensional (3D) camera calibration for machine vision metrology using off-the-shelf TV cameras and lenses is described. The two-stage technique is aimed at efficient computation of camera external position and orientation relative to object reference coordinate system as well as the effective focal length, radial lens distortion, and image scanning parameters. The two-stage technique has advantage in terms of accuracy, speed, and versatility over existing state-of-the-art. A critical review of the state of the art is given in the beginning. A theoretical framework is established, supported by comprehensive proof in five appendixes, and may pave the way for future research on 3D robotics vision. Test results using real data are described. Both accuracy and speed are reported. The experimental results are analyzed and compared with theoretical prediction. Recent effort indicates that with slight modification, the two-stage calibration can be done in real time.},
+@incollection{Tsai1987,
 author = {Tsai, Roger Y.},
-doi = {10.1109/JRA.1987.1087109},
-file = {:D$\backslash$:/lars/Documents/gitProjects/BA-Haalck-2016/Literatur/Tsai.pdf:pdf},
-isbn = {0867202947},
-issn = {08824967},
-journal = {IEEE Journal on Robotics and Automation},
-number = {4},
+chapter = {A Versatile Camera Calibration Technique for High-accuracy 3D Machine Vision Metrology Using Off-the-shelf TV Cameras and Lenses},
+title = {Radiometry},
+year = {1987},
+isbn = {0-86720-294-7},
 pages = {323--344},
-pmid = {61},
-title = {{A Versatile Camera Calibration Technique for High-Accuracy 3D Machine Vision Metrology Using Off-the-Shelf TV Cameras and Lenses}},
-volume = {3},
-year = {1987}
+numpages = {22},
+url = {http://dl.acm.org/citation.cfm?id=136913.136938},
+acmid = {136938},
+publisher = {Jones and Bartlett Publishers, Inc.},
+address = {USA},
 }
 
 
-@article{Heikkila1997,
-abstract = {In geometrical camera calibration the objective is to determine a set of camera parameters that describe the mapping between 3-D reference coordinates and 2-D image coordinates. Various methods for camera calibration can be found from the literature....},
+@inproceedings{Heikkila1997,
 author = {Heikkil{\"{a}}, Janne and Silv{\'{e}}n, Olli},
-doi = {10.1109/CVPR.1997.609468},
-file = {:D$\backslash$:/lars/Documents/gitProjects/BA-Haalck-2016/Literatur/heikkila97.pdf:pdf},
+title = {A Four-step Camera Calibration Procedure with Implicit Image Correction},
+booktitle = {Proceedings of the 1997 Conference on Computer Vision and Pattern Recognition (CVPR '97)},
+series = {CVPR '97},
+year = {1997},
 isbn = {0-8186-7822-4},
-issn = {1063-6919},
-journal = {Cvpr},
-pages = {1106--1112},
-pmid = {1151469},
-title = {{A Four-step Camera Calibration Procedure with Implicit Image Correction.}},
-url = {http://dx.doi.org/10.1109/CVPR.1997.609468$\backslash$npapers3://publication/doi/10.1109/CVPR.1997.609468},
-year = {1997}
+pages = {1106--},
+url = {http://dl.acm.org/citation.cfm?id=794189.794489},
+acmid = {794489},
+publisher = {IEEE Computer Society},
+address = {Washington, DC, USA},
+keywords = {camera calibration, accurate 3-D measurements, lens distortion, circular features},
 }
 
 
 @article{Canny1986,
-abstract = {This paper describes a computational approach to edge detection. The success of the approach depends on the definition of a comprehensive set of goals for the computation of edge points. These goals must be precise enough to delimit the desired behavior of the detector while making minimal assumptions about the form of the solution. We define detection and localization criteria for a class of edges, and present mathematical forms for these criteria as functionals on the operator impulse response. A third criterion is then added to ensure that the detector has only one response to a single edge. We use the criteria in numerical optimization to derive detectors for several common image features, including step edges. On specializing the analysis to step edges, we find that there is a natural uncertainty principle between detection and localization performance, which are the two main goals. With this principle we derive a single operator shape which is optimal at any scale. The optimal detector has a simple approximate implementation in which edges are marked at maxima in gradient magnitude of a Gaussian-smoothed image. We extend this simple detector using operators of several widths to cope with different signal-to-noise ratios in the image. We present a general method, called feature synthesis, for the fine-to-coarse integration of information from operators at different scales. Finally we show that step edge detector performance improves considerably as the operator point spread function is extended along the edge.},
-author = {Canny, John},
-doi = {10.1109/TPAMI.1986.4767851},
-file = {:D$\backslash$:/lars/Documents/gitProjects/BA-Haalck-2016/Literatur/canny1986.pdf:pdf},
-isbn = {0-934613-33-8},
-issn = {01628828},
-journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
-keywords = {Edge detection,feature extraction,image processing,machine vision,multiscale image analysis},
+author = {Canny, J},
+title = {A Computational Approach to Edge Detection},
+journal = {IEEE Trans. Pattern Anal. Mach. Intell.},
+issue_date = {June 1986},
+volume = {8},
 number = {6},
+year = {1986},
+issn = {0162-8828},
 pages = {679--698},
-pmid = {21869365},
-title = {{A Computational Approach to Edge Detection}},
-volume = {PAMI-8},
-year = {1986}
+numpages = {20},
+url = {http://dx.doi.org/10.1109/TPAMI.1986.4767851},
+doi = {10.1109/TPAMI.1986.4767851},
+acmid = {11275},
+publisher = {IEEE Computer Society},
+address = {Washington, DC, USA},
+keywords = {Edge detection, feature extraction, image processing, machine vision, multiscale image analysis},
 }
 
 
 @article{Lindeberg1993,
-abstract = {This article presents: (i) a multiscale representation of grey-level shape called the scale-space primal sketch, which makes explicit both features in scale-space and the relations between structures at different scales, (ii) a methodology for extracting significant blob-like image structures from this representation, and (iii) applications to edge detection, histogram analysis, and junction classification demonstrating how the proposed method can be used for guiding later-stage visual processes. The representation gives a qualitative description of image structure, which allows for detection of stable scales and associated regions of interest in a solely bottom-up data-driven way. In other words, it generates coarse segmentation cues, and can hence be seen as preceding further processing, which can then be properly tuned. It is argued that once such information is available, many other processing tasks can become much simpler. Experiments on real imagery demonstrate that the proposed theory gives intuitive results.},
 author = {Lindeberg, Tony},
-doi = {10.1007/BF01469346},
-file = {:D$\backslash$:/lars/Documents/gitProjects/BA-Haalck-2016/Literatur/det-sal-blob-structs.ijcv93.pdf:pdf},
-issn = {09205691},
+title = {Detecting Salient Blob-like Image Structures and Their Scales with a Scale-space Primal Sketch: A Method for Focus-of-attention},
 journal = {International Journal of Computer Vision},
-number = {3},
-pages = {283--318},
-title = {{Detecting salient blob-like image structures and their scales with a scale-space primal sketch: A method for focus-of-attention}},
+issue_date = {Dec. 1993},
 volume = {11},
-year = {1993}
+number = {3},
+year = {1993},
+issn = {0920-5691},
+pages = {283--318},
+numpages = {36},
+url = {http://dx.doi.org/10.1007/BF01469346},
+doi = {10.1007/BF01469346},
+acmid = {171892},
+publisher = {Kluwer Academic Publishers},
+address = {Hingham, MA, USA},
 }
 
 
@@ -115,89 +122,121 @@ year = {2011}
 
 
 @ARTICLE{Gorman1976,
-author={F. O'Gorman and M. B. Clowes},
-journal={IEEE Transactions on Computers},
-title={Finding Picture Edges Through Collinearity of Feature Points},
-year={1976},
-volume={C-25},
-number={4},
-pages={449-456},
-keywords={Edge finding, machine vision, scene analysis.;Cameras;Computer architecture;Context modeling;Councils;Foot;Layout;Leg;Machine vision;Psychology;TV;Edge finding, machine vision, scene analysis.},
-doi={10.1109/TC.1976.1674627},
-ISSN={0018-9340},
-month={April},}
+author = {O'Gorman, F. and Clowes, M. B.},
+title = {Finding Picture Edges Through Collinearity of Feature Points},
+journal = {IEEE Transactions on Computers},
+issue_date = {April 1976},
+volume = {25},
+number = {4},
+year = {1976},
+issn = {0018-9340},
+pages = {449--456},
+numpages = {8},
+url = {http://dx.doi.org/10.1109/TC.1976.1674627},
+doi = {10.1109/TC.1976.1674627},
+acmid = {1310234},
+publisher = {IEEE Computer Society},
+address = {Washington, DC, USA},
+keywords = {Edge finding, machine vision, scene analysis.},
+}
 
 
 @Book{Hartley2000,
-    author = "Hartley, R.~I. and Zisserman, A.",
-    title = "Multiple View Geometry in Computer Vision",
-    year = "2000",
-    publisher = "Cambridge University Press, ISBN: 0521623049"
+author = {Hartley, Richard and Zisserman, Andrew},
+title = {Multiple View Geometry in Computer Vision},
+year = {2003},
+isbn = {0521540518},
+edition = {2},
+publisher = {Cambridge University Press},
+address = {New York, NY, USA},
 }
 
 @article{Zhang2002,
-abstract = {We propose a flexible new technique to easily calibrate a camera. It is well suited for use without specialized knowledge of 3D geometry or computer vision. The technique only requires the camera to observe a planar pattern shown at a few (at least two) different orientations. Either the camera or the planar pattern can be freely moved. The motion need not be known. Radial lens distortion is modeled. The proposed procedure consists of a closed-form solution, followed by a nonlinear refinement based on the maximum likelihood criterion. Both computer simulation and real data have been used to test the proposed technique, and very good results have been obtained. Compared with classical techniques which use expensive equipment such as two or three orthog- onal planes, the proposed technique is easy to use and flexible. It advances 3D computer vision one step from laboratory environments to real world use.},
 author = {Zhang, Zhengyou},
-doi = {10.1109/34.888718},
-file = {:D$\backslash$:/lars/Documents/gitProjects/BA-Haalck-2016/Literatur/ZhangCameraCalib.pdf:pdf},
-isbn = {MSR-TR-98-71},
-issn = {01628828},
-journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
-number = {11},
-pages = {1330--1334},
-pmid = {131},
-title = {{A Flexible New Technique for Camera Calibration (Technical Report)}},
+title = {A Flexible New Technique for Camera Calibration},
+journal = {IEEE Trans. Pattern Anal. Mach. Intell.},
+issue_date = {November 2000},
 volume = {22},
-year = {2002}
+number = {11},
+year = {2000},
+issn = {0162-8828},
+pages = {1330--1334},
+numpages = {5},
+url = {http://dx.doi.org/10.1109/34.888718},
+doi = {10.1109/34.888718},
+acmid = {357025},
+publisher = {IEEE Computer Society},
+address = {Washington, DC, USA},
+keywords = {Camera calibration, calibration from planes, 2D pattern, flexible plane-based calibration, absolute conic, projective mapping, lens distortion, closed-form solution, maximum likelihood estimation, flexible setup.},
 }
 
 @book{Bosch2006,
 author = {Bosch, Siegfried},
 doi = {10.1007/3-540-29885-1},
-file = {:D$\backslash$:/lars/Documents/Uni/WS13/Lina/bosch{\_}lina.pdf:pdf},
 isbn = {3-540-29884-3},
 issn = {0717-6163},
 pmid = {15003161},
 title = {{Lineare Algebra}},
-url = {http://www.ncbi.nlm.nih.gov/pubmed/15003161$\backslash$nhttp://cid.oxfordjournals.org/lookup/doi/10.1093/cid/cir991$\backslash$nhttp://www.scielo.cl/pdf/udecada/v15n26/art06.pdf$\backslash$nhttp://www.scopus.com/inward/record.url?eid=2-s2.0-84861150233{\&}partnerID=tZOtx3y1$\backslash$nhttp://link.spr},
 year = {2006}
 }
 
 
-@misc{Yuille1992,
+@article{Yuille1992,
 author = {Yuille, Alan L. and Hallinan, Peter W. and Cohen, David S.},
-booktitle = {International journal of computer vision},
-file = {:D$\backslash$:/lars/Documents/gitProjects/BA-Haalck-2016/Literatur/deformable.pdf:pdf},
+title = {Feature Extraction from Faces Using Deformable Templates},
+journal = {Int. J. Comput. Vision},
+issue_date = {Aug. 1992},
+volume = {8},
+number = {2},
+year = {1992},
 issn = {0920-5691},
 pages = {99--111},
-title = {{Feature Extraction from faces using deformable Template}},
-year = {1992}
+numpages = {13},
+url = {http://dx.doi.org/10.1007/BF00127169},
+doi = {10.1007/BF00127169},
+acmid = {144380},
+publisher = {Kluwer Academic Publishers},
+address = {Hingham, MA, USA},
 }
 
 
 @article{Keys1981,
-abstract = {Cubic convolution interpolation is a new technique for resampling discrete data. It has a number of desirable features which make it useful for image processing. The technique can be performed efficiently on a digital computer. The cubic convolution interpolation function converges uniformly to the function being interpolated as the sampling increment approaches zero. With the appropriate boundary conditions and constraints on the interpolation kernel, it can be shown that the order of accuracy of the cubic convolution method is between that of linear interpolation and that of cubic splines. A one-dimensional interpolation function is derived in this paper. A separable extension of this algorithm to two dimensions is applied to image data.},
 author = {Keys, R.},
-doi = {10.1109/TASSP.1981.1163711},
-file = {:D$\backslash$:/lars/Documents/gitProjects/BA-Haalck-2016/Literatur/bicubic.pdf:pdf},
-isbn = {0096-3518},
-issn = {0096-3518},
-journal = {IEEE Transactions on Acoustics, Speech, and Signal Processing},
-number = {6},
-pages = {1153--1160},
-title = {{Cubic convolution interpolation for digital image processing}},
+title = {Cubic convolution interpolation for digital image processing},
+journal = {Acoustics, Speech and Signal Processing, IEEE Transactions on},
 volume = {29},
-year = {1981}
+number = {6},
+year = {1981},
+issn = {0096-3518},
+pages = {1153--1160},
+url = {http://dx.doi.org/10.1109/TASSP.1981.1163711},
+doi = {10.1109/TASSP.1981.1163711},
 }
 
 
 @article{Dice1945,
-author = {Dice, Lee R .},
-file = {:D$\backslash$:/lars/Documents/gitProjects/BA-Haalck-2016/Literatur/dice.pdf:pdf},
+author = {Dice, Lee Raymond},
+title = {Measures of the Amount of Ecologic Association Between Species},
 journal = {Ecological Society of America},
-number = {3},
-pages = {297--302},
-title = {{Measures of the Amount of Ecologic Association Between Species}},
 volume = {26},
-year = {1945}
+number = {3},
+year = {1945},
+pages = {297--302},
+}
+
+@inproceedings{Su1997,
+author = {Su, Peter and Drysdale, Robert L. Scot},
+title = {A Comparison of Sequential Delaunay Triangulation Algorithms},
+booktitle = {Proceedings of the Eleventh Annual Symposium on Computational Geometry},
+series = {SCG '95},
+year = {1995},
+isbn = {0-89791-724-3},
+location = {Vancouver, British Columbia, Canada},
+pages = {61--70},
+numpages = {10},
+url = {http://doi.acm.org/10.1145/220279.220286},
+doi = {10.1145/220279.220286},
+acmid = {220286},
+publisher = {ACM},
+address = {New York, NY, USA},
 }
