einleitung, astract, fazit einleitung fehlen

--- a/Latex/quellen.bib
+++ b/Latex/quellen.bib
@@ -7,12 +7,20 @@ year = {1972},
 isbn = {9780486602882},
 }
 
+@article{Eberly2008,
+author = {Eberly, David},
+title = {{The Area of Intersecting Ellipses}},
+year = {2008},
+}
+
 @article{Eberly2013,
 author = {Eberly, David},
 title = {{Distance from a Point to an Ellipse, an Ellipsoid, or a Hyperellipsoid}},
 pages = {1--13},
 year = {2013},
 }
+
+
 
 @article{Fischler1981,
 author = {Fischler, Martin A. and Bolles, Robert C.},
@@ -239,4 +247,21 @@ doi = {10.1145/220279.220286},
 acmid = {220286},
 publisher = {ACM},
 address = {New York, NY, USA},
+}
+
+
+@Article{Havel2014,
+author= {Havel, Ji{\v{r}}{\'i}
+and Dubsk{\'a}, Mark{\'e}ta
+and Herout, Adam
+and Jo{\v{s}}th, Radovan},
+title= {Real-time detection of lines using parallel coordinates and CUDA},
+journal={Journal of Real-Time Image Processing},
+year={2014},
+volume={9},
+number={1},
+pages={205--216},
+issn={1861-8219},
+doi={10.1007/s11554-012-0303-4},
+url={http://dx.doi.org/10.1007/s11554-012-0303-4}
 }
